# docs/openapi.swagger.json
@@ -10,6 +10,9 @@
       "description": "Guild management operations"
     },
     {
+      "name": "MediaService"
+    },
+    {
       "name": "Message",
       "description": "Message management operations"
     },
@@ -1298,6 +1301,14 @@
         "categories"
       ]
     },
+    "GetPresignedUploadURLResponse": {
+      "type": "object",
+      "properties": {
+        "uploadUrl": {
+          "type": "string"
+        }
+      }
+    },
     "GetUserByIDResponse": {
       "type": "object",
       "properties": {
@@ -1604,6 +1615,15 @@
       "required": [
         "token"
       ]
+    },
+    "MediaType": {
+      "type": "string",
+      "enum": [
+        "MEDIA_TYPE_UNSPECIFIED",
+        "MEDIA_TYPE_GUILD_ICON",
+        "MEDIA_TYPE_USER_ICON"
+      ],
+      "default": "MEDIA_TYPE_UNSPECIFIED"
     },
     "Member": {
       "type": "object",
