# server/api/gen/media/media_service.pb.go
@@ -1,0 +1,233 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.10
+// 	protoc        (unknown)
+// source: media_service.proto
+
+package mediapb
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type MediaType int32
+
+const (
+	MediaType_MEDIA_TYPE_UNSPECIFIED MediaType = 0
+	MediaType_MEDIA_TYPE_GUILD_ICON  MediaType = 1
+	MediaType_MEDIA_TYPE_USER_ICON   MediaType = 2
+)
+
+// Enum value maps for MediaType.
+var (
+	MediaType_name = map[int32]string{
+		0: "MEDIA_TYPE_UNSPECIFIED",
+		1: "MEDIA_TYPE_GUILD_ICON",
+		2: "MEDIA_TYPE_USER_ICON",
+	}
+	MediaType_value = map[string]int32{
+		"MEDIA_TYPE_UNSPECIFIED": 0,
+		"MEDIA_TYPE_GUILD_ICON":  1,
+		"MEDIA_TYPE_USER_ICON":   2,
+	}
+)
+
+func (x MediaType) Enum() *MediaType {
+	p := new(MediaType)
+	*p = x
+	return p
+}
+
+func (x MediaType) String() string {
+	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
+}
+
+func (MediaType) Descriptor() protoreflect.EnumDescriptor {
+	return file_media_service_proto_enumTypes[0].Descriptor()
+}
+
+func (MediaType) Type() protoreflect.EnumType {
+	return &file_media_service_proto_enumTypes[0]
+}
+
+func (x MediaType) Number() protoreflect.EnumNumber {
+	return protoreflect.EnumNumber(x)
+}
+
+// Deprecated: Use MediaType.Descriptor instead.
+func (MediaType) EnumDescriptor() ([]byte, []int) {
+	return file_media_service_proto_rawDescGZIP(), []int{0}
+}
+
+type GetPresignedUploadURLRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	MediaType     MediaType              `protobuf:"varint,1,opt,name=media_type,json=mediaType,proto3,enum=media.MediaType" json:"media_type,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetPresignedUploadURLRequest) Reset() {
+	*x = GetPresignedUploadURLRequest{}
+	mi := &file_media_service_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetPresignedUploadURLRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetPresignedUploadURLRequest) ProtoMessage() {}
+
+func (x *GetPresignedUploadURLRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_media_service_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetPresignedUploadURLRequest.ProtoReflect.Descriptor instead.
+func (*GetPresignedUploadURLRequest) Descriptor() ([]byte, []int) {
+	return file_media_service_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *GetPresignedUploadURLRequest) GetMediaType() MediaType {
+	if x != nil {
+		return x.MediaType
+	}
+	return MediaType_MEDIA_TYPE_UNSPECIFIED
+}
+
+type GetPresignedUploadURLResponse struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	UploadUrl     string                 `protobuf:"bytes,1,opt,name=upload_url,json=uploadUrl,proto3" json:"upload_url,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetPresignedUploadURLResponse) Reset() {
+	*x = GetPresignedUploadURLResponse{}
+	mi := &file_media_service_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetPresignedUploadURLResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetPresignedUploadURLResponse) ProtoMessage() {}
+
+func (x *GetPresignedUploadURLResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_media_service_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetPresignedUploadURLResponse.ProtoReflect.Descriptor instead.
+func (*GetPresignedUploadURLResponse) Descriptor() ([]byte, []int) {
+	return file_media_service_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *GetPresignedUploadURLResponse) GetUploadUrl() string {
+	if x != nil {
+		return x.UploadUrl
+	}
+	return ""
+}
+
+var File_media_service_proto protoreflect.FileDescriptor
+
+const file_media_service_proto_rawDesc = "" +
+	"\n" +
+	"\x13media_service.proto\x12\x05media\"O\n" +
+	"\x1cGetPresignedUploadURLRequest\x12/\n" +
+	"\n" +
+	"media_type\x18\x01 \x01(\x0e2\x10.media.MediaTypeR\tmediaType\">\n" +
+	"\x1dGetPresignedUploadURLResponse\x12\x1d\n" +
+	"\n" +
+	"upload_url\x18\x01 \x01(\tR\tuploadUrl*\\\n" +
+	"\tMediaType\x12\x1a\n" +
+	"\x16MEDIA_TYPE_UNSPECIFIED\x10\x00\x12\x19\n" +
+	"\x15MEDIA_TYPE_GUILD_ICON\x10\x01\x12\x18\n" +
+	"\x14MEDIA_TYPE_USER_ICON\x10\x022r\n" +
+	"\fMediaService\x12b\n" +
+	"\x15GetPresignedUploadURL\x12#.media.GetPresignedUploadURLRequest\x1a$.media.GetPresignedUploadURLResponseBc\n" +
+	"\tcom.mediaB\x11MediaServiceProtoP\x01Z\x0f./media;mediapb\xa2\x02\x03MXX\xaa\x02\x05Media\xca\x02\x05Media\xe2\x02\x11Media\\GPBMetadata\xea\x02\x05Mediab\x06proto3"
+
+var (
+	file_media_service_proto_rawDescOnce sync.Once
+	file_media_service_proto_rawDescData []byte
+)
+
+func file_media_service_proto_rawDescGZIP() []byte {
+	file_media_service_proto_rawDescOnce.Do(func() {
+		file_media_service_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_media_service_proto_rawDesc), len(file_media_service_proto_rawDesc)))
+	})
+	return file_media_service_proto_rawDescData
+}
+
+var file_media_service_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
+var file_media_service_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_media_service_proto_goTypes = []any{
+	(MediaType)(0),                        // 0: media.MediaType
+	(*GetPresignedUploadURLRequest)(nil),  // 1: media.GetPresignedUploadURLRequest
+	(*GetPresignedUploadURLResponse)(nil), // 2: media.GetPresignedUploadURLResponse
+}
+var file_media_service_proto_depIdxs = []int32{
+	0, // 0: media.GetPresignedUploadURLRequest.media_type:type_name -> media.MediaType
+	1, // 1: media.MediaService.GetPresignedUploadURL:input_type -> media.GetPresignedUploadURLRequest
+	2, // 2: media.MediaService.GetPresignedUploadURL:output_type -> media.GetPresignedUploadURLResponse
+	2, // [2:3] is the sub-list for method output_type
+	1, // [1:2] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
+}
+
+func init() { file_media_service_proto_init() }
+func file_media_service_proto_init() {
+	if File_media_service_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_media_service_proto_rawDesc), len(file_media_service_proto_rawDesc)),
+			NumEnums:      1,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_media_service_proto_goTypes,
+		DependencyIndexes: file_media_service_proto_depIdxs,
+		EnumInfos:         file_media_service_proto_enumTypes,
+		MessageInfos:      file_media_service_proto_msgTypes,
+	}.Build()
+	File_media_service_proto = out.File
+	file_media_service_proto_goTypes = nil
+	file_media_service_proto_depIdxs = nil
+}
